# HuaWeiEmbedded2023

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  configure.h  data.txt  generateRandomNet.h  main.cpp  randomDataGen.cpp  result.txt  run.bat  run.sh  runJudger.bat  runJudger.sh  struct.h  technical challenges.md  无排序+新迭代4+最小加边网络储存.cpp  起点终点排序.cpp  距离排序+新迭代4.cpp
Judger/: quick_run_judger.bat
MATLAB/: Node.m  Prim.m  businessAllocation.txt  businessMinPath.txt  customGraphDatatip.m  cyclizeMST.m  dataGen.m  dataGenArgs.mat  dataGenConfigure.m  dataMATLAB.txt  flatNodeArray.mat  generateBusiness.m  generateTransaction.m  generateXY.m  newEdgeCntRecord.mat  newEdgeTmpCnt.mat  nodeCreated.m  plotAddNewEdge.m  plotBasedStrategy.m  plotBusNumInMiltiEdge.m  plotDetourStatistic.m  plotIterationDetail.m  plotNewEdgeCntRecord.m  plotOrderingEffect.m  plotOverview.m  plotSingleBusiness.m  plotSingleTransaction.m  plotTranNumInMultiEdge.m  plotUsedPile.m  plotUsedPile3D.m  plotUsedPilewithMinPath.m  randDataOutput.m  readResult.m  result.txt  totUsedPileCntRecord.mat  transactionAllocation.txt  transactionInPile.txt  transactionStatistic.txt  work.mlx
MATLAB/output/: 0iterStatistic.txt  (+10 more)
getMinPath/: businessAllocation.txt  main.cpp
src/: Data_visulization.cpp  Solution.cpp  Solution.h  Solution_BFS.cpp  Solution_base.cpp  Solution_deleteEdge.cpp  Solution_reallocate.cpp  UtilityFunction.cpp  UtilityFunction.h  configure.h  dataMATLAB.txt  global_struct.cpp  global_struct.h  global_var.cpp  global_var.h  main.cpp  struct.cpp  struct.h
判题器/: README.md
